set system properties in flight module and read from settings